--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Thanks to the source code from <a href="https://github.com/jonbarron/jonbarron_website"></a>!
+                Thanks to the source code from <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>!
               </p>
             </td>
           </tr>
