--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
               </p>
 
               <p>
-                I am a Master/Ph.D integrated student in <a href="https://aibrain.kaist.ac.kr/">Brain and Machine Intelligence Lab (BML)</a> at KAIST, advised by Sang Wan Lee.
-                Before joining KAIST, I received B.S. degree on majoring in Electrical and Electronic Engineering, and minoring in Psychology from Yonsei University.
+                I am graduated as Master in <a href="https://aibrain.kaist.ac.kr/">Brain and Machine Intelligence Lab (BML)</a> at KAIST, advised by Sang Wan Lee.
+                Before joining KAIST, I spent a semester taking a recommender system course from <a href="https://github.com/boostcampaitech3">Boostcamp</a> held by Naver Connect.
+                Also, I received B.S. degree on majoring in Electrical and Electronic Engineering, and minoring in Psychology from Yonsei University.
                 During undegraduate, I had a chance to work as an undergraduate research assistant in <a href="https://ccs-lab.github.io/">Computational Clinical Science</a>
                 and advised by Woo-Young Ahn. I was also advised by Sang Hoon Han for leading the undergraduate study club <a href="https://cogsci.yonsei.ac.kr/">CogSci::IN</a>.
               </p>
@@ -33,7 +34,17 @@
               <p style="text-align:center">
                 <a href="data/younghajo_resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/hawe66">Github</a> &nbsp/&nbsp
-                <a href="mailto:youngha908@kaist.ac.kr">Email</a>
+                <a href="mailto:youngha908@kaist.ac.kr">Email</a> &nbsp/&nbsp
+                <a href="https://docs.google.com/presentation/d/1xa-mJCKuc3MTw4ScR_yIfON1HIspDRr-_nxy5te0Y6g/edit?usp=sharing">전공요약발표자료</a>
+              </p>
+              <p>
+                <strong>Skills & Tools</strong>
+                <ul>
+                  <li>Programming Languages: Python (Advanced), JavaScript (Novice), C#, C++ (Beginner)</li>
+                  <li>Machine Learning: PyTorch (Advanced), Tensorflow (Intermediate)</li>
+                  <li>Game Development: Unity (Intermediate)</li>
+                  <li>Data Engineering: SQL, MongoDB, Google Firebase (Novice)</li>
+                </ul>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -48,12 +59,65 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm broadly interested in cognition, and especially in decision-making scenarios where understanding the environment and applying
-                the prior knowledge is needed. I believe this framework is scalable to interpret many things in real world.
-                Based on this interest, I am studying and working on reinforcement learning to design the model
-                which learns the causal structure of the environment and applies prior knowledge based on its understanding.
-                Towards this end, I want to examine 'how' intelligence acquires these abilities and uses them, and explain the intelligence
-                within this framework.
+                I'm interested in building AI systems that mimic and analyze human cognition,
+                with the belief that this framework can be scaled to interpret complex real-world phenomena.
+                To this end, I focus on designing deep learning models that learn causal and hierarchical structures of the environment, much like humans do.
+                Additionally, I design novel experiments to study human cognition, gaining insights that inform and enhance AI development.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:20px;width:20%;vertical-align:middle">
+                <h3>Event Unit Prediction Research</h3>
+              <a href="images/platform.gif" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 1" src="images/platform.gif" class="hoverZoomLink"></a>
+              <p><strong>Human Experiment Platform:</strong>
+                Built a Unity WebGL-based interactive experiment platform to collect human prediction data.
+                Integrated Google Firebase for real-time data storage and analysis.
+                Designed tasks where participants predict events in a physics-based environment (Angry Birds).</p>
+                <a href="images/model.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 2" src="images/model.png" class="hoverZoomLink"></a>
+              <p><strong>Hierarchical Video Prediction Model:</strong> A model that predicts future frames in a video by learning hierarchical structures.
+                Designed a temporal abastraction model that incorporates causal inference & event-based representation.
+                Demonstrated AI’s ability to simulate human-like event anticipation.</p>
+              </td>
+            </tr>
+            <tr> 
+              <td style="padding:20px;width:20%;vertical-align:middle">
+                <h3>Stable Predictive Coding Network Research</h3>
+                <a href="images/spcn.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 3" src="images/spcn.png" class="hoverZoomLink"></a>
+              <a href="images/pcnanal.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 4" src="images/pcnanal.png" class="hoverZoomLink"></a>
+                <p>Investigated <strong>stability issues</strong> in Predictive Coding Networks (PCN) and proposed a novel <strong>Stable Predictive Coding Network (SPCN)</strong>.
+                Conducted experiments to analyze instability factors in PCN, identifying key failure points.
+                Designed a new architecture that stabilizes learning in PCN (SPCN), and showed improved performance in various tasks.  
+              </p>
+              </td>
+            </tr> 
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Publications</heading>
+              <p>
+                <strong>Jo, Y.</strong>, Lee, S. W. (2025). <em>Designing a Platform and Algorithm for Event-Cognitive Unit Prediction Experiments.</em> Patent pending.
+              </p>
+              <p>
+                Ha, M., Sung, Y., <strong>Jo, Y.</strong> (2025). <em>Towards Stable Learning in Predictive Coding Networks.</em> International Joint Conference on Artificial Intelligence (IJCAI), under second review.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Projects</heading>
+              <a href="images/total_service.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 5" src="images/total_service.png" class="hoverZoomLink"></a>
+              <p>
+                <strong><a href="https://github.com/boostcampaitech3/final-project-level3-recsys-04">Github Repository Recommendation Service</a>:</strong>
+                Built a personalized recommendation engine for GitHub repositories.
+                Users struggle to find relevant repositories due to GitHub's vast dataset.
+                Developed a Node.js-based REST API using MongoDB and machine learning ranking algorithms.
+                Mitigated cold-start issues with hybrid recommendation models.
               </p>
             </td>
           </tr>
@@ -65,7 +129,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Thanks to the source code from <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>!
+                Source code from <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>
               </p>
             </td>
           </tr>
