--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                   <li>Data Engineering: SQL, MongoDB, Google Firebase (Novice)</li>
                 </ul>
               </p>
+              <p>
+                <strong>English Proficiency</strong>
+                <ul>
+                  <li>OPIc: Intermediate High (2025.01.31)</li>
+                  <li>TEPS: 2+ (2021.10.02)</li>
+                </ul>
+              </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
               <a href="images/IMG_1429.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_1429.JPG" class="hoverZoomLink"></a>
@@ -73,12 +80,13 @@
               <td style="padding:20px;width:20%;vertical-align:middle">
                 <h3>Event Unit Prediction Research</h3>
               <a href="images/platform.gif" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 1" src="images/platform.gif" class="hoverZoomLink"></a>
-              <p><strong>Human Experiment Platform:</strong>
+              <p><strong><a href="https://github.com/hawe66/SB_survey">Human Experiment Platform</a>:</strong>
                 Built a Unity WebGL-based interactive experiment platform to collect human prediction data.
                 Integrated Google Firebase for real-time data storage and analysis.
-                Designed tasks where participants predict events in a physics-based environment (Angry Birds).</p>
+                Designed tasks where participants predict events in a physics-based environment (Angry Birds).
+                Check <a href="https://hawe66.github.io/SB_survey/">online experiment link</a> to conduct it by yourself! </p>
                 <a href="images/model.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 2" src="images/model.png" class="hoverZoomLink"></a>
-              <p><strong>Hierarchical Video Prediction Model:</strong> A model that predicts future frames in a video by learning hierarchical structures.
+              <p><strong><a href="https://gitlab.com/event_planner/benchmark/-/tree/master?ref_type=heads">Hierarchical Video Prediction Model</a>:</strong> A model that predicts future frames in a video by learning hierarchical structures.
                 Designed a temporal abastraction model that incorporates causal inference & event-based representation.
                 Demonstrated AI’s ability to simulate human-like event anticipation.</p>
               </td>
@@ -88,9 +96,10 @@
                 <h3>Stable Predictive Coding Network Research</h3>
                 <a href="images/spcn.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 3" src="images/spcn.png" class="hoverZoomLink"></a>
               <a href="images/pcnanal.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 4" src="images/pcnanal.png" class="hoverZoomLink"></a>
-                <p>Investigated <strong>stability issues</strong> in Predictive Coding Networks (PCN) and proposed a novel <strong>Stable Predictive Coding Network (SPCN)</strong>.
+                <p><strong>SPCN:</strong> Investigated <strong>stability issues</strong> in Predictive Coding Networks (PCN) and proposed a novel <strong>Stable Predictive Coding Network (SPCN)</strong>.
                 Conducted experiments to analyze instability factors in PCN, identifying key failure points.
-                Designed a new architecture that stabilizes learning in PCN (SPCN), and showed improved performance in various tasks.  
+                Designed a new architecture that stabilizes learning in PCN (SPCN), and showed improved performance in various tasks.
+                Code is currently private, but will be released after the paper is accepted.
               </p>
               </td>
             </tr> 
