--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:20px;width:20%;vertical-align:middle">
-                <h3>Event Unit Prediction Research</h3>
+                <h3>Event Unit Prediction Research (23.07~24.12)</h3>
               <a href="images/platform.gif" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 1" src="images/platform.gif" class="hoverZoomLink"></a>
               <p><strong><a href="https://github.com/hawe66/SB_survey">Human Experiment Platform</a>:</strong>
                 Built a Unity WebGL-based interactive experiment platform to collect human prediction data.
@@ -93,7 +93,7 @@
             </tr>
             <tr> 
               <td style="padding:20px;width:20%;vertical-align:middle">
-                <h3>Stable Predictive Coding Network Research</h3>
+                <h3>Stable Predictive Coding Network Research (24.03~)</h3>
                 <a href="images/spcn.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 3" src="images/spcn.png" class="hoverZoomLink"></a>
               <a href="images/pcnanal.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 4" src="images/pcnanal.png" class="hoverZoomLink"></a>
                 <p><strong>SPCN:</strong> Investigated <strong>stability issues</strong> in Predictive Coding Networks (PCN) and proposed a novel <strong>Stable Predictive Coding Network (SPCN)</strong>.
@@ -118,8 +118,9 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Projects</heading>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h3>Github Repository Recommendation Project (22.05~22.06)</h3>
               <a href="images/total_service.png" style="display:block;text-align:center;"><img style="width:80%;max-width:80%" alt="Image 5" src="images/total_service.png" class="hoverZoomLink"></a>
               <p>
                 <strong><a href="https://github.com/boostcampaitech3/final-project-level3-recsys-04">Github Repository Recommendation Service</a>:</strong>
