--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <p>
                 <strong>Skills & Tools</strong>
                 <ul>
-                  <li>Programming Languages: Python (Advanced), JavaScript (Novice), C#, C++ (Beginner)</li>
+                  <li>Programming Languages: Python (Advanced), JavaScript, C#, C++ (Novice)</li>
                   <li>Machine Learning: PyTorch (Advanced), Tensorflow (Intermediate)</li>
                   <li>Game Development: Unity (Intermediate)</li>
-                  <li>Data Engineering: SQL, MongoDB, Google Firebase (Novice)</li>
+                  <li>Data Engineering: SQL (Intermediate), MongoDB, Google Firebase (Novice)</li>
                 </ul>
               </p>
               <p>
@@ -109,7 +109,7 @@
                 <strong>Jo, Y.</strong>, Lee, S. W. (2025). <em>Designing a Platform and Algorithm for Event-Cognitive Unit Prediction Experiments.</em> Patent pending.
               </p>
               <p>
-                Ha, M., Sung, Y., <strong>Jo, Y.</strong> (2025). <em>Towards Stable Learning in Predictive Coding Networks.</em> International Joint Conference on Artificial Intelligence (IJCAI), under second review.
+                Ha, M., Sung, Y., <strong>Jo, Y.</strong> (2026). <em>Stable and Scalable Deep Predictive Coding Networks with Meta Prediction Errors.</em> International Conference on Learning Representation (ICLR), under second review.
               </p>
             </td>
           </tr>
