--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
                 Developed a Node.js-based REST API using MongoDB and machine learning ranking algorithms.
                 Mitigated cold-start issues with hybrid recommendation models.
               </p>
+              <h3>LLM Architecture & Fine-tuning Study (2024.06~2024.08)</h3>
+              <a href="https://colab.research.google.com/github/hawe66/sql-learning-log/blob/main/slm_lora_toy.ipynb#scrollTo=32bc0ace" style="display:block;text-align:center;">
+                <img style="width:80%;max-width:80%" alt="Image" src="https://github.com/hawe66/sql-learning-log/raw/main/images/lora_vs_qlora.png" class="hoverZoomLink">
+              </a>
+              <p>
+                <strong><a href="https://modulabs.co.kr/community/momos/164">From Attention to Action: LLM 논문 톺아보기</a> / 
+                <a href="https://modulabs.co.kr/community/momos/384">LLM 논문 읽고 구현까지</a>:</strong>
+                Participated in intensive study sessions covering the evolution of LLM architectures (e.g., Attention, Transformer, Decoder-only models) and alignment methods (e.g., RLHF, DPO). 
+                The study combined theory with hands-on implementation.
+                <br><br>
+                Conducted practical fine-tuning experiments comparing <strong>LoRA</strong>, <strong>QLoRA</strong>, and full fine-tuning using <code>DistilGPT2</code> and <code>GPT2-Medium</code> on the CNN/DailyMail summarization task.
+                Compared VRAM usage, trainable parameters, training speed, and generation quality.
+                Implementation available via <a href="https://colab.research.google.com/github/hawe66/sql-learning-log/blob/main/slm_lora_toy.ipynb">Colab notebook</a>.
+              </p>
             </td>
           </tr>
         </tbody></table>
