--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <p>
                 <strong>Skills & Tools</strong>
                 <ul>
-                  <li>Programming Languages: Python (Advanced), JavaScript, C#, C++ (Novice)</li>
+                  <li>Programming Languages: Python (Advanced), C++ (Intermediate), JavaScript, C# (Novice)</li>
                   <li>Machine Learning: PyTorch (Advanced), Tensorflow (Intermediate)</li>
                   <li>Game Development: Unity (Intermediate)</li>
-                  <li>Data Engineering: SQL (Intermediate), MongoDB, Google Firebase (Novice)</li>
+                  <li>Data Engineering: PostgreSQL (Intermediate), MongoDB, Google Firebase (Novice)</li>
                 </ul>
               </p>
               <p>
