--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <ul>
                   <li>Programming Languages: Python (Advanced), C++ (Intermediate), JavaScript, C# (Novice)</li>
                   <li>Machine Learning: PyTorch (Advanced), Tensorflow (Intermediate)</li>
+                  <li>AI Engineering Tools: Hugging Face, LangChain/LangGraph, LLM APIs (GPT/Claude), ngrok, Google ADK (Novice)</li>
                   <li>Game Development: Unity (Intermediate)</li>
                   <li>Data Engineering: PostgreSQL (Intermediate), MongoDB, Google Firebase (Novice)</li>
                 </ul>
